# orogen_cpp_proxies

./: CMakeLists.txt  History.txt  Manifest.txt  README.rdoc  Rakefile  manifest.xml
lib/: orogen_cpp_proxies.rb
lib/orogen_cpp_proxies/: base.rb  test.rb
orogen/: orogen_plugin.rb
orogen/proxies/: CMakeLists.txt  Forward.hpp  Task.cpp  Task.hpp  proxies.pc
test/: suite.rb  test_orogen_cpp_proxies.rb
